MDEV-34054 Memory leak in Window_func_runner::exec after encountering "temporary space limit reached" error